statsDisplay not staying on screen

--- a/config.toml
+++ b/config.toml
@@ -1,26 +1,14 @@
 
 [general]
+	remove_hypixel_lobby_join_and_mystery_box_messages = true
 	legion_display = true
-	auto_2x_guild_message = true
-	auto_game_update_guild_message = true
+	combat_stats_display = true
 	cooldown_display = true
-
-	[general."§eoverall"]
-		overall = true
-
-	[general."§escanning_method"]
-		change_scanning_speed = 1
-		"location_&_stage_scan_everywhere_in_end" = true
 
 [kuudra]
+	kuudra_alerts = true
 	supply_placement_waypoint = true
 	number_of_runs_in_nametag = true
-	stun = true
-
-[hud]
-	legion_display = true
-	cooldown_display = true
-	skyblock_xp_display = true
 
 [bestiary]
 	bestiary_tracker = true
@@ -34,6 +22,7 @@
 		arachnes_keeper = true
 
 [levels]
+	cheapest_skyblock_xp = true
 	skyblock_xp_display = true
 	skyblock_xp_decimal_in_nametag = true
 
@@ -42,7 +31,4 @@
 	auto_game_update_guild_message = true
 	jacob_notifier = true
 	auto_2x_powder_guild_message = true
-
-[undefined]
-	cheapest_skyblock_xp = true
 
