--- a/config.toml
+++ b/config.toml
@@ -4,9 +4,9 @@
 	waypoint_color = "255,255,0,255"
 	chat_type_waypoint_rendering = 0
 	stops_entity_death_animation = true
-	draw_chat_waypoints = 63
+	draw_chat_waypoints = 105
 	invited_player_name = ""
-	detect_reaper_armor = true
+	detect_reaper_armor = false
 	party_and_warp_on_chat_message = ""
 	skyblock_xp_gain_message = true
 	treecap_timer = false
@@ -15,41 +15,41 @@
 	steak-able_vamp_hitbox = false
 
 [kuudra]
-	stop_rendering_mob_nametags_in_kuudra = true
-	shows_kuudra = true
-	supply_pearl_lineup = true
-	custom_supply_drop_message = true
+	stop_rendering_mob_nametags_in_kuudra = false
+	shows_kuudra = false
+	supply_pearl_lineup = false
+	custom_supply_drop_message = false
 	"not_stunning?" = true
-	accurate_supply_waypoints = true
-	highlight_teammates_in_kuudra = true
+	accurate_supply_waypoints = false
+	highlight_teammates_in_kuudra = false
 	teammate_color = "255,106,0,255"
-	"no_pre!_no_second!" = true
-	supply_drop_waypoints = true
-	draw_hitboxes_around_freshers = true
+	"no_pre!_no_second!" = false
+	supply_drop_waypoints = false
+	draw_hitboxes_around_freshers = false
 	breaking_piles = false
-	build_helper = true
-	stop_rendering_useless_perks = true
-	notify_party_on_fresh = true
+	build_helper = false
+	stop_rendering_useless_perks = false
+	notify_party_on_fresh = false
 
 [hud]
 
 	[hud.widget]
-		custom_widget_text = "RNG Meter:"
+		custom_widget_text = "Collection:"
 		trophy_fish_widget = false
 		pet_widget = true
 		stats_widget = true
 		widget_display = true
 		pest_widget = false
-		commission_widget = false
+		commission_widget = true
 		crop_milestone_widget = false
-		custom_widget = false
+		custom_widget = true
 		visitor_widget = false
 		jacob_widget = false
 		bestiary_widget = true
-		powder_widget = false
+		powder_widget = true
 
 	[hud.poison]
-		poison_display = true
+		poison_display = false
 
 	[hud.clock]
 		time_display = 1
@@ -64,9 +64,9 @@
 
 	[hud.mana]
 		mana_enchant_calc = false
-		endstone_sword_party_notify = true
+		endstone_sword_party_notify = false
 		cumulative_fero_mana = 0
-		endstone_sword_mana_drain_range = true
+		endstone_sword_mana_drain_range = false
 		cumulative_strong_mana = 0
 
 	[hud.blaze]
@@ -75,7 +75,7 @@
 	[hud.fatal_tempo]
 		fatal_tempo_settings = 1
 		fatal_tempo_timer_scale = 1.2
-		fatal_tempo_display = true
+		fatal_tempo_display = false
 
 	[hud.bestiary]
 		mob_highlight_counter = false
@@ -87,7 +87,7 @@
 		miniboss_display = false
 
 	[hud.champion]
-		champion_display = true
+		champion_display = false
 
 	[hud.gyro]
 		gyro_display = false
@@ -104,7 +104,7 @@
 	player_names_esp = ""
 
 [crimson_isle]
-	announce_vanquishers = true
+	announce_vanquishers = false
 	trophy_fish_session_counter = false
 	announce_jawbus = false
 	announce_plhlegblasts = false
@@ -112,21 +112,23 @@
 	better_magma_boss_message = false
 
 ["beta_(wip)"]
-	gyro_range = true
+	gyro_range = false
+	corpse_waypoints = true
+	agro_range = false
+	tracks_damage_armor_stands = false
+	totem_color_opacity = 0.25
 	agro_range_color = "255,255,0,0"
 	totem_range = false
 	gyro_color_opacity = 0.5
-	agro_range = true
 	agro_color_opacity = 0.5
 	removed_boss_dialouge = true
-	tracks_damage_armor_stands = false
-	totem_color_opacity = 0.25
 	totem_range_options = 0
 	gyro_range_color = "255,255,0,255"
 	totem_range_color = "255,0,255,255"
+	mineshaft_helper = true
 
 [qol]
-	toggle_block_highlight = true
+	toggle_block_highlight = false
 	render_armor_bar = true
 	remove_discord_warnings = true
 	render_food_bar = true
