--- a/config.toml
+++ b/config.toml
@@ -4,13 +4,14 @@
 	waypoint_color = "255,255,0,255"
 	chat_type_waypoint_rendering = 0
 	stops_entity_death_animation = true
-	draw_chat_waypoints = 105
+	draw_chat_waypoints = 54
+	confirm_leader_commands = true
 	invited_player_name = ""
 	detect_reaper_armor = false
 	party_and_warp_on_chat_message = ""
 	skyblock_xp_gain_message = true
 	treecap_timer = false
-	waypoint_beacon_height = 150
+	waypoint_beacon_height = 71
 	party_commands = true
 	steak-able_vamp_hitbox = false
 
@@ -34,7 +35,7 @@
 [hud]
 
 	[hud.widget]
-		custom_widget_text = ""
+		custom_widget_text = "Mining Event:"
 		frozen_corpse_widget = true
 		trophy_fish_widget = false
 		pet_widget = true
@@ -43,7 +44,7 @@
 		pest_widget = false
 		commission_widget = true
 		crop_milestone_widget = false
-		custom_widget = false
+		custom_widget = true
 		visitor_widget = false
 		jacob_widget = false
 		bestiary_widget = true
@@ -95,7 +96,7 @@
 		mage_gyro = false
 
 [bestiary]
-	mob_esp = "Skeleton"
+	mob_esp = ""
 	armor_stand_esp_color = "255,0,255,0"
 	armor_stand_names_esp = ""
 	player_esp_color = "255,255,0,255"
@@ -113,7 +114,7 @@
 	better_magma_boss_message = false
 
 ["beta_(wip)"]
-	lapis_only = false
+	lapis_only = true
 	gyro_range = false
 	corpse_waypoints = true
 	agro_range = false
