--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@
 	chat_type_waypoint_rendering = 0
 	stops_entity_death_animation = true
 	draw_chat_waypoints = 54
-	confirm_leader_commands = true
+	confirm_leader_commands = false
 	invited_player_name = ""
 	detect_reaper_armor = false
 	party_and_warp_on_chat_message = ""
@@ -35,7 +35,7 @@
 [hud]
 
 	[hud.widget]
-		custom_widget_text = "Mining Event:"
+		custom_widget_text = "Players"
 		frozen_corpse_widget = true
 		trophy_fish_widget = false
 		pet_widget = true
@@ -51,7 +51,7 @@
 		powder_widget = true
 
 	[hud.poison]
-		poison_display = false
+		poison_display = true
 
 	[hud.clock]
 		time_display = 1
@@ -114,7 +114,7 @@
 	better_magma_boss_message = false
 
 ["beta_(wip)"]
-	lapis_only = true
+	lapis_only = false
 	gyro_range = false
 	corpse_waypoints = true
 	agro_range = false
